--- a/src/scripts/control
+++ b/src/scripts/control
@@ -1,9 +1,9 @@
-Package: zec-qt-wallet
+Package: yecwallet
 Version: RELEASE_VERSION
 Section: base
 Priority: optional
 Architecture: amd64
-Maintainer: Aditya Kulkarni <zcash@adityapk.com>
-Description: ZecWallet is a full node and UI wallet for Zcash.
- ZecWallet is a full node and UI wallet for Zcash. It comes with 
- full support for shielded addresses and many apps for Zcash.
+Maintainer: Ycash Foundation <info@ycash.xyz>
+Description: YecWallet is a full node and UI wallet for Ycash.
+ YecWallet is a full node and UI wallet for Ycash. It comes with 
+ full support for shielded addresses.
