--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,9 @@ src/ui_*.h
 *.autosave
 src/precompiled.h.cpp
 .qmake.stash
-zecwallet
-zec-qt-wallet
-zec-qt-wallet.app
-ZecWallet.app
+yecwallet
+yecwallet.app
+YecWallet.app
 zec-qt-wallet-mingw*
 zec-qt-wallet.vcxproj*
 zecwallet.vcxproj*
@@ -24,16 +23,16 @@ zec-qt-wallet.pro.user
 Makefile
 Makefile.*
 qrc_application.cpp
-zec-qt-wallet_plugin_import.cpp
-zecwallet_plugin_import.cpp
-zec-qt-wallet_resource*
-zecwallet_resource*
+yec-qt-wallet_plugin_import.cpp
+yecwallet_plugin_import.cpp
+yec-qt-wallet_resource*
+yecwallet_resource*
 workspace.code-workspace
 *.zip
 *.tar.gz
 *.xcsettings
 .DS_Store
 *.mak
-zcashd
+ycashd
 IDEWorkspaceChecks.plist
 *.sln
